--- a/src/main/resources/templates/abada_capoeira.html
+++ b/src/main/resources/templates/abada_capoeira.html
@@ -1,37 +1,28 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
-    <title>ABADA Capoeira</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layouts/layout.html">
 <body>
-<th:block th:include="inc/header :: header"></th:block>
-
-
+<div layout:fragment="content">
     <img src="/img/abadalogo.jpg" style="display: block; margin: 0 auto;width:250px; height:200px;"><br>
     <img src="/img/abada jogo.jpg" style="display: block; margin: 0 auto;width:1300px; height:500px;">
-<div style="text-align: center;">
-    <h2>아바다 카포에이라의 역사</h2>
-    <br>
-    <p>
-        ABADA-Capoeira는 Mestre Camisa(José Tadeu Carneiro Cardoso)가 1988년에 설립했으며 카포에라 예술<br>
-        에 평생을 바친 9명의 Mestres 와 16명의 Mestrandos 그룹이 이끌고 있습니다  . 이 조직은 리우데자네<br>
-        이루에 있으며 전 세계 60개국 이상에 약 70,000명의 학생이 있습니다.<br>
+    <div style="text-align: center;">
+        <h2>아바다 카포에이라의 역사</h2>
         <br>
-        Mestre Camisa가 만든 Centro Educacional Mestre Bimba(CEMB). CEMB는 리우데자네이루 주의 Cachoei<br>
-        ras de Macacu에 있습니다. 훈련과 교육의 공간이자 자연을 접할 수 있는 기회이기도 합니다. ABADA-Ca<br>
-        poeira 선배 학생들을 위한 중요한 연례 행사인 Zumbimba를 포함하여 많은 행사가 이곳에서 열립니다.<br>
-        <br>
-        ABADA-Capoeira는 스타일, 표준 및 철학뿐만 아니라 세계적인 성장으로 다른 카포에라 조직과 구별됩니<br>
-        다. ABADA-Capoeira에 대한 Mestre Camisa의 비전은 과거에 한 발, 미래에 한 발을 내딛고 전통을 유지<br>
-        하면서 사회 변화에 적응하여 앞으로 나아가는 조직을 만드는 것입니다.<br>
-    </p>
+        <p>
+            ABADA-Capoeira는 Mestre Camisa(José Tadeu Carneiro Cardoso)가 1988년에 설립했으며 카포에라 예술<br>
+            에 평생을 바친 9명의 Mestres 와 16명의 Mestrandos 그룹이 이끌고 있습니다  . 이 조직은 리우데자네<br>
+            이루에 있으며 전 세계 60개국 이상에 약 70,000명의 학생이 있습니다.<br>
+            <br>
+            Mestre Camisa가 만든 Centro Educacional Mestre Bimba(CEMB). CEMB는 리우데자네이루 주의 Cachoei<br>
+            ras de Macacu에 있습니다. 훈련과 교육의 공간이자 자연을 접할 수 있는 기회이기도 합니다. ABADA-Ca<br>
+            poeira 선배 학생들을 위한 중요한 연례 행사인 Zumbimba를 포함하여 많은 행사가 이곳에서 열립니다.<br>
+            <br>
+            ABADA-Capoeira는 스타일, 표준 및 철학뿐만 아니라 세계적인 성장으로 다른 카포에라 조직과 구별됩니<br>
+            다. ABADA-Capoeira에 대한 Mestre Camisa의 비전은 과거에 한 발, 미래에 한 발을 내딛고 전통을 유지<br>
+            하면서 사회 변화에 적응하여 앞으로 나아가는 조직을 만드는 것입니다.<br>
+        </p>
+    </div>
 </div>
-
-<th:block th:include="inc/footer :: footer"></th:block>
 </body>
 </html>
