--- a/src/main/resources/templates/abada_capoeiramap.html
+++ b/src/main/resources/templates/abada_capoeiramap.html
@@ -1,25 +1,16 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-
-    <title>map</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layouts/layout.html">
 <body>
-<th:block th:include="inc/header :: header"></th:block>
+<div layout:fragment="content">
+    <img src="/img/abadalogo.jpg" style="display: block; margin: 0 auto;width:250px; height:200px;"><br>
 
-<img src="/img/abadalogo.jpg" style="display: block; margin: 0 auto;width:250px; height:200px;"><br>
+    <div style="text-align: center;">
+        <h2>ABADA 서울지부</h2>
 
-<div style="text-align: center;">
-<h2>ABADA 서울지부</h2>
-
+    </div>
 </div>
-
-<footer class="text-center border-top container mt-5">
-    capoeira - pinoquio
-</footer>
 </body>
 </html>
+
