--- a/src/main/resources/templates/cmniti.html
+++ b/src/main/resources/templates/cmniti.html
@@ -1,22 +1,24 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layouts/layout.html">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
   <!-- jquery cdn -->
   <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
   <script type="text/javascript" th:src="@{/js/cmnitimain.js}"></script>
-<!--<script src="js/validChk.js"></script>-->
-  <title>cmniti</title>
+
 </head>
 <body>
-<!-- 커뮤니티에 넣어야 하는것들 영상,사진,답글,조회수-->
-<th:block th:include="inc/header :: header"></th:block>
+<div layout:fragment="content">
+
+  <!-- 커뮤니티에 넣어야 하는것들 영상,사진,답글,조회수-->
+  <th:block th:include="inc/header :: header"></th:block>
 
   <button onclick="saveReq()">글작성</button>
   <button onclick="listReq()">글목록</button>
   <button onclick="pagingReq()">페이징목록</button>
+</div>
 </body>
 </html>
+
