--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -1,17 +1,10 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<!--<script src="js/validChk.js"></script>-->
-    <title>Title</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layouts/layout.html">
 <body>
-<th:block th:include="inc/header :: header"></th:block>
-
-<img src="/img/capoeira main.jpg" style="display: block; margin: 0 auto;width:1300px; height:500px;">
+<div layout:fragment="content">
+    <img src="/img/capoeira main.jpg" style="display: block; margin: 0 auto;width:1300px; height:500px;">
     <br>
     <div style="text-align: center;">
         <h3>카포에이라 홈페이지에 오신것을 환영합니다</h3>
@@ -32,10 +25,6 @@
             단이기도 합니다. 카포에리스타는 카포에라의 신체 동작뿐만 아니라 음악, 언어, 문화, 역사도 배웁니다.<br>
         </p>
     </div>
-    <br>
-
-<footer class="text-center border-top container mt-5">
-    capoeira - pinoquio
-</footer>
+</div>
 </body>
 </html>
