--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -1,32 +1,23 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.w3.org">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
-<!--<script src="js/validChk.js"></script>-->
-    <title>Title</title>
-</head>
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layouts/layout.html">
 <body>
-<th:block th:include="inc/header :: header"></th:block>
+<div layout:fragment="content">
+    <div class="container w-50 shadow rounded border p-5 mt-5">
+        <form action="/capoeiraweb/login" method="post">
+            <h3 class="text-center mb-4">로그인</h3>
 
-<div class="container w-50 shadow rounded border p-5 mt-5">
-    <form action="/capoeiraweb/login" method="post">
-        <h3 class="text-center mb-4">로그인</h3>
+            <input class="form-control mb-3" type="text" id="id" name="id" placeholder="아이디"/>
+            <input class="form-control mb-2" type="password" id="pw" name="password" placeholder="비밀번호"/>
 
-        <input class="form-control mb-3" type="text" id="id" name="id" placeholder="아이디"/>
-        <input class="form-control mb-2" type="password" id="pw" name="password" placeholder="비밀번호"/>
-
-        <div class="text-center pt-4">
-            <input type="submit" class="btn btn-primary w-100" value="로그인"/>
-        </div>
-    </form>
-    <div><i class="fa fa-user-plus" aria-hidden="true"></i> <a href="/capoeiraweb/login_info">회원가입</a></div>
+            <div class="text-center pt-4">
+                <input type="submit" class="btn btn-primary w-100" value="로그인"/>
+            </div>
+        </form>
+        <div><i class="fa fa-user-plus" aria-hidden="true"></i> <a href="/capoeiraweb/login_info">회원가입</a></div>
+    </div>
 </div>
-
-<footer class="text-center border-top container mt-5">
-    capoeira - pinoquio
-</footer>
 </body>
 </html>
+
