--- a/src/main/resources/templates/login_info.html
+++ b/src/main/resources/templates/login_info.html
@@ -1,65 +1,62 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layouts/layout.html">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
     <!-- jquery cdn -->
     <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
     <script type="text/javascript" th:src="@{/js/login_infomain.js}"></script>
-
-    <title>Title</title>
 </head>
 <body>
-<th:block th:include="inc/header :: header"></th:block>
-
-<div class="container w-50 shadow rounded border p-5 mt-5">
-    <h1 class="text-center mb-4">회원가입</h1>
-    <form method="POST" action="/capoeiraweb/login_info">
-        <div class="form-group mb-3">
-            <label for="id">아이디:</label>
-            <div class="input-group">
-                <input type="text" class="form-control" id="id" name="id" required><br>
-                <div class="input-group-append">
-                    <button type="button" class="btn btn-outline-secondary" id="check-btn" onclick="idCheck()">중복체크</button>
+<div layout:fragment="content">
+    <div class="container w-50 shadow rounded border p-5 mt-5">
+        <h1 class="text-center mb-4">회원가입</h1>
+        <form method="POST" action="/capoeiraweb/login_info">
+            <div class="form-group mb-3">
+                <label for="id">아이디:</label>
+                <div class="input-group">
+                    <input type="text" class="form-control" id="id" name="id" required><br>
+                    <div class="input-group-append">
+                        <button type="button" class="btn btn-outline-secondary" id="check-btn" onclick="idCheck()">중복체크</button>
+                    </div>
                 </div>
+                <p id="checkResult"></p>
             </div>
-            <p id="checkResult"></p>
-        </div>
-        <div class="form-group mb-3">
-            <label for="password">비밀번호:</label>
-            <input type="password" class="form-control" id="password" name="password" required>
-        </div>
-        <div class="form-group mb-3">
-            <label for="password-confirm">비밀번호 확인:</label>
-            <input type="password" class="form-control" id="password-confirm" name="password-confirm" required>
-            <div id="passwordCheckResult"></div>
-            <button type="button" class="btn btn-outline-secondary" id="checkk-btn" onclick="pwCheck()">중복체크</button>
-        </div>
-        <div class="form-group mb-3">
-            <label for="cagroup">그룹:</label>
-            <select class="form-control" id="cagroup" name="cagroup" required>
-                <option value="">선택하세요</option>
-                <option value="ABADA">ABADA</option>
-                <option value="MUZENZA">MUZENZA</option>
-            </select>
-        </div>
-        <div class="form-group mb-3">
-            <label for="name">이름:</label>
-            <input type="text" class="form-control" id="name" name="name" required>
-        </div>
-        <div class="form-group mb-3">
-            <label for="nickname">별명:</label>
-            <input type="text" class="form-control" id="nickname" name="nickname" required>
-        </div>
-        <div class="text-center">
-            <button type="submit" class="btn btn-primary" value="회원가입">회원가입</button>
-        </div>
-    </form>
+            <div class="form-group mb-3">
+                <label for="password">비밀번호:</label>
+                <input type="password" class="form-control" id="password" name="password" required>
+            </div>
+            <div class="form-group mb-3">
+                <label for="password-confirm">비밀번호 확인:</label>
+                <input type="password" class="form-control" id="password-confirm" name="password-confirm" required>
+                <div id="passwordCheckResult"></div>
+                <button type="button" class="btn btn-outline-secondary" id="checkk-btn" onclick="pwCheck()">중복체크</button>
+            </div>
+            <div class="form-group mb-3">
+                <label for="cagroup">그룹:</label>
+                <select class="form-control" id="cagroup" name="cagroup" required>
+                    <option value="">선택하세요</option>
+                    <option value="ABADA">ABADA</option>
+                    <option value="MUZENZA">MUZENZA</option>
+                </select>
+            </div>
+            <div class="form-group mb-3">
+                <label for="name">이름:</label>
+                <input type="text" class="form-control" id="name" name="name" required>
+            </div>
+            <div class="form-group mb-3">
+                <label for="nickname">별명:</label>
+                <input type="text" class="form-control" id="nickname" name="nickname" required>
+            </div>
+            <div class="text-center">
+                <button type="submit" class="btn btn-primary" value="회원가입">회원가입</button>
+            </div>
+        </form>
+    </div>
 </div>
-<footer class="text-center border-top container mt-5">
-    capoeira - pinoquio
-</footer>
 </body>
 </html>
+
+
+
