--- a/src/main/resources/templates/paging.html
+++ b/src/main/resources/templates/paging.html
@@ -1,78 +1,77 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorate="layouts/layout.html">
+
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet">
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.bundle.min.js"></script>
+
   <!-- jquery cdn -->
   <script src="https://code.jquery.com/jquery-3.6.3.min.js"></script>
   <script type="text/javascript" th:src="@{/js/pagingmain.js}"></script>
   <!-- css 링크 코드 -->
   <link rel="stylesheet" th:href="@{/css/paging.css}">
 
-  <title>paging</title>
+
 </head>
 <body>
-<th:block th:include="inc/header :: header"></th:block>
-<div class="container text-center mt-5">
-  <table class="table center" style="color:black;">
-    <thead class="thead-dark">
-    <tr>
-      <th>NO</th>
-      <th>제목</th>
-      <th>작성자</th>
-      <th>시간</th>
-      <th>조회수</th>
-    </tr>
-    </thead>
-    <tbody>
-    <tr th:each="board: ${boardList}">
-      <td th:text="${board.id}"></td>
-      <td><a th:href="@{|/capoeiraweb/${board.id}|(page=${boardList.number + 1})}" th:text="${board.boardTitle}"></a></td>
-      <td th:text="${board.boardWriter}"></td>
-      <td th:text="*{#temporals.format(board.boardCreatedTime, 'yyyy-MM-dd')}"></td>
-      <td th:text="${board.boardHits}"></td>
-    </tr>
-    </tbody>
-  </table>
-</div>
+<div layout:fragment="content">
+  <div class="container text-center mt-5">
+    <table class="table center" style="color:black;">
+      <thead class="thead-dark">
+      <tr>
+        <th>NO</th>
+        <th>제목</th>
+        <th>작성자</th>
+        <th>시간</th>
+        <th>조회수</th>
+      </tr>
+      </thead>
+      <tbody>
+      <tr th:each="board: ${boardList}">
+        <td th:text="${board.id}"></td>
+        <td><a th:href="@{|/capoeiraweb/${board.id}|(page=${boardList.number + 1})}" th:text="${board.boardTitle}"></a></td>
+        <td th:text="${board.boardWriter}"></td>
+        <td th:text="*{#temporals.format(board.boardCreatedTime, 'yyyy-MM-dd')}"></td>
+        <td th:text="${board.boardHits}"></td>
+      </tr>
+      </tbody>
+    </table>
+  </div>
 
-<div class="container text-right mt-5">
-  <a th:href="${session.loginNickname != null} ? '/capoeiraweb/save' : '/capoeiraweb/login'" class="btn btn-primary">글 작성하기</a>
-</div>
+  <div class="container text-right mt-5">
+    <a th:href="${session.loginNickname != null} ? '/capoeiraweb/save' : '/capoeiraweb/login'" class="btn btn-primary">글 작성하기</a>
+  </div>
 
-<div class="container text-center mt-5">
-  <!-- 첫번째 페이지로 이동 -->
-  <!-- /board/paging?page=1 -->
-  <a th:href="@{/capoeiraweb/paging(page=1)}">First</a>
+  <div class="container text-center mt-5">
+    <!-- 첫번째 페이지로 이동 -->
+    <!-- /board/paging?page=1 -->
+    <a th:href="@{/capoeiraweb/paging(page=1)}">First</a>
 
-  <!-- 이전 링크 활성화 비활성화 -->
-  <!-- boardList.getNumber() 사용자:2페이지 getNumber()=1 -->
-  <a th:href="${boardList.first} ? '#' : @{/capoeiraweb/paging(page=${boardList.number})}">prev</a>
+    <!-- 이전 링크 활성화 비활성화 -->
+    <!-- boardList.getNumber() 사용자:2페이지 getNumber()=1 -->
+    <a th:href="${boardList.first} ? '#' : @{/capoeiraweb/paging(page=${boardList.number})}">prev</a>
 
-  <!-- 페이지 번호 링크(현재 페이지는 숫자만)
-        for(int page=startPage; page<=endPage; page++)-->
-  <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
+    <!-- 페이지 번호 링크(현재 페이지는 숫자만)
+          for(int page=startPage; page<=endPage; page++)-->
+    <span th:each="page: ${#numbers.sequence(startPage, endPage)}">
     <!-- 현재페이지는 링크 없이 숫자만 -->
     <span th:if="${page == boardList.number + 1}" th:text="${page}"></span>
 
-    <!-- 현재페이지 번호가 아닌 다른 페이지번호에는 링크를 보여줌 -->
+      <!-- 현재페이지 번호가 아닌 다른 페이지번호에는 링크를 보여줌 -->
     <span th:unless="${page == boardList.number + 1}">
       <a th:href="@{/capoeiraweb/paging(page=${page})}" th:text="${page}"></a>
     </span>
   </span>
 
-  <!-- 다음 링크 활성화 비활성화
-    사용자: 2페이지, getNumber: 1, 3페이지-->
-  <a th:href="${boardList.last} ? '#' : @{/capoeiraweb/paging(page=${boardList.number + 2})}">next</a>
+    <!-- 다음 링크 활성화 비활성화
+      사용자: 2페이지, getNumber: 1, 3페이지-->
+    <a th:href="${boardList.last} ? '#' : @{/capoeiraweb/paging(page=${boardList.number + 2})}">next</a>
 
-  <!-- 마지막 페이지로 이동 -->
-  <a th:href="@{/capoeiraweb/paging(page=${boardList.totalPages})}">Last</a>
+    <!-- 마지막 페이지로 이동 -->
+    <a th:href="@{/capoeiraweb/paging(page=${boardList.totalPages})}">Last</a>
+  </div>
 </div>
-
-<footer class="text-center border-top container mt-5">
-  capoeira - pinoquio
-</footer>
 </body>
 </html>
+
+
