--- a/src/main/resources/templates/abada_capoeiramap.html
+++ b/src/main/resources/templates/abada_capoeiramap.html
@@ -8,7 +8,13 @@
 
     <div style="text-align: center;">
         <h2>ABADA 서울지부</h2>
-
+    </div>
+    <!-- 아바다 카포에이라 동영상 추가 -->
+    <p style="text-align: center;">
+        <iframe width="560" height="315" src="/video/abadacapoeira_.mp4"
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+    </p>
     </div>
 </div>
 </body>
