--- a/src/main/resources/templates/abada_capoeiramapp.html
+++ b/src/main/resources/templates/abada_capoeiramapp.html
@@ -8,8 +8,13 @@
 
     <div style="text-align: center;">
         <h2>ABADA 부천지부</h2>
-
     </div>
+    <p style="text-align: center;">
+        <!-- 아바다 카포에이라 동영상 추가 -->
+        <iframe width="560" height="315" src="/video/abadacapoeira_.mp4"
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+    </p>
 </div>
 </body>
 </html>
