--- a/src/main/resources/templates/abada_capoeiramap.html
+++ b/src/main/resources/templates/abada_capoeiramap.html
@@ -7,7 +7,7 @@
     <img src="/img/abadalogo.jpg" style="display: block; margin: 0 auto;width:250px; height:200px;"><br>
 
     <div style="text-align: center;">
-        <h2>ABADA 서울지부</h2>
+        <h2>ABADA 서울센터</h2>
     </div>
     <!-- 아바다 카포에이라 동영상 추가 -->
     <p style="text-align: center;">
@@ -15,6 +15,13 @@
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
     </p>
+    <div class="map-content" style="text-align: center;">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3164.3574222146194!2d126.89029974088248!3d37.52307102673482!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c9fbb205fa6bf%3A0xb5e5fd09aec2aef7!2z7JWE67CU64ukIOy5tO2PrOyXkOudvCDshLzthLA!5e0!3m2!1sko!2skr!4v1682657147118!5m2!1sko!2skr"
+                width="600" height="450"
+                style="border:0;"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </div>
 </body>
