--- a/src/main/resources/templates/abada_capoeiramapp.html
+++ b/src/main/resources/templates/abada_capoeiramapp.html
@@ -7,7 +7,7 @@
     <img src="/img/abadalogo.jpg" style="display: block; margin: 0 auto;width:250px; height:200px;"><br>
 
     <div style="text-align: center;">
-        <h2>ABADA 부천지부</h2>
+        <h2>ABADA 부천센터</h2>
     </div>
     <p style="text-align: center;">
         <!-- 아바다 카포에이라 동영상 추가 -->
@@ -15,6 +15,14 @@
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
     </p>
+    <div class="map-content" style="text-align: center;">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.5711130437426!2d126.75864514088144!3d37.49444612837394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b7d51a3862983%3A0xb2e96815dc585201!2z7JWE67CU64ukIOy5tO2PrOyXkOudvCDrtoDsspzshLzthLA!5e0!3m2!1sko!2skr!4v1682657389347!5m2!1sko!2skr"
+                width="600" height="450"
+                style="border:0;"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
+    </div>
 </div>
 </body>
 </html>
