--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -19,8 +19,8 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="abadaDropdown">
                       <li><a class="dropdown-item" href="/capoeiraweb/abada">ABADA의 역사</a></li>
-                      <li><a class="dropdown-item" href="/capoeiraweb/abadamap">ABADA 서울지부</a></li>
-                      <li><a class="dropdown-item" href="/capoeiraweb/abadamapp">ABADA 부천지부</a></li>
+                      <li><a class="dropdown-item" href="/capoeiraweb/abadamap">ABADA 서울센터</a></li>
+                      <li><a class="dropdown-item" href="/capoeiraweb/abadamapp">ABADA 부천센터</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
@@ -29,7 +29,7 @@
                     </a>
                     <ul class="dropdown-menu" aria-labelledby="muzenzaDropdown">
                       <li><a class="dropdown-item" href="/capoeiraweb/muzenza">MUZENZA의 역사</a></li>
-                      <li><a class="dropdown-item" href="/capoeiraweb/muzenzamap">MUZENZA 서울지부</a></li>
+                      <li><a class="dropdown-item" href="/capoeiraweb/muzenzamap">MUZENZA 서울센터</a></li>
                     </ul>
                   </li>
                   <li class="nav-item">
