--- a/src/main/resources/templates/muzenza_capoeiramap.html
+++ b/src/main/resources/templates/muzenza_capoeiramap.html
@@ -7,7 +7,21 @@
     <img src="/img/muzenzalogo.png" style="display: block; margin: 0 auto;width:245px; height:200px;"><br>
 
     <div style="text-align: center;">
-        <h2>MUZENZA 서울지부</h2>
+        <h2>MUZENZA 서울센터</h2>
+    </div>
+
+    <p>
+
+
+    </p>
+
+    <div class="map-content" style="text-align: center;">
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.9815391563693!2d126.90670404088353!3d37.55549872487644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c9927c701e991%3A0xd7464326816c9792!2z66y07KCg7J6QIOq5jOu9gOyXkOydtOudvA!5e0!3m2!1sko!2skr!4v1682657706542!5m2!1sko!2skr"
+                width="600" height="450"
+                style="border:0;"
+                allowfullscreen=""
+                loading="lazy"
+                referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
 </div>
 </body>
