--- a/src/main/resources/templates/abada_capoeiramapp.html
+++ b/src/main/resources/templates/abada_capoeiramapp.html
@@ -15,6 +15,24 @@
                 frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
                 allowfullscreen></iframe>
     </p>
+
+    <div style="text-align: center;">
+        <p>지도자-Melancia</p>
+        <p><img src="/img/Melancia.jpg"
+                width="217" height="307"
+                style="cursor: pointer; rwidth: 217px; rheight: 307px;"
+                id="20141106_163/lkh860808_1415250822447aNR2v_JPEG/%C1%A4%BC%BA%C1%D6.jpg"
+                onclick="popview(this, '90000003_0000000000000033435A414A')"
+                alt="" class="_photoImage egjs-visible" data-lazy-src="">
+        </p>
+        <p>
+            ABADÁ-CAPOEIRA 부천지부 대표
+        </p>
+        <p>
+
+        </p>
+    </div>
+
     <div class="map-content" style="text-align: center;">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.5711130437426!2d126.75864514088144!3d37.49444612837394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b7d51a3862983%3A0xb2e96815dc585201!2z7JWE67CU64ukIOy5tO2PrOyXkOudvCDrtoDsspzshLzthLA!5e0!3m2!1sko!2skr!4v1682657389347!5m2!1sko!2skr"
                 width="600" height="450"
@@ -23,6 +41,7 @@
                 loading="lazy"
                 referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+    <a href="https://blog.naver.com/lkh860808"><img src="/img/blog.png" width="50" height="50"></a>
 </div>
 </body>
 </html>
