--- a/src/main/resources/templates/abada_capoeiramapp.html
+++ b/src/main/resources/templates/abada_capoeiramapp.html
@@ -18,6 +18,7 @@
 
     <div style="text-align: center;">
         <p>지도자-Melancia</p>
+        <p> ( 이규호 )</p>
         <p><img src="/img/Melancia.jpg"
                 width="217" height="307"
                 style="cursor: pointer; rwidth: 217px; rheight: 307px;"
@@ -29,10 +30,15 @@
             ABADÁ-CAPOEIRA 부천지부 대표
         </p>
         <p>
-
+            E-mail : 00000000@naver.com<br>
+            Youtube : http//www.youtube.com/channel/UC4QBGN8VUE-gnnxpir9dKUw<br>
+            Tel : 010 0000 0000
         </p>
     </div>
-
+    <div style="text-align: center;">
+        <p>< 위치 ></p>
+    </div>
+    <!-- 지도추가 -->
     <div class="map-content" style="text-align: center;">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.5711130437426!2d126.75864514088144!3d37.49444612837394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b7d51a3862983%3A0xb2e96815dc585201!2z7JWE67CU64ukIOy5tO2PrOyXkOudvCDrtoDsspzshLzthLA!5e0!3m2!1sko!2skr!4v1682657389347!5m2!1sko!2skr"
                 width="600" height="450"
