--- a/src/main/resources/templates/muzenza_capoeiramap.html
+++ b/src/main/resources/templates/muzenza_capoeiramap.html
@@ -9,12 +9,21 @@
     <div style="text-align: center;">
         <h2>MUZENZA 서울센터</h2>
     </div>
-
+    <p style="text-align: center;">
+        <!-- 무젠자 카포에이라 동영상 추가 -->
+        <iframe width="560" height="315" src="/video/Capoeira Muzenza Roda.mp4"
+                frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen></iframe>
+    </p>
     <p>
 
 
     </p>
 
+    <div style="text-align: center;">
+        <p>< 위치 ></p>
+    </div>
+    <!-- 지도추가 -->
     <div class="map-content" style="text-align: center;">
         <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3162.9815391563693!2d126.90670404088353!3d37.55549872487644!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c9927c701e991%3A0xd7464326816c9792!2z66y07KCg7J6QIOq5jOu9gOyXkOydtOudvA!5e0!3m2!1sko!2skr!4v1682657706542!5m2!1sko!2skr"
                 width="600" height="450"
