--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -32,8 +32,13 @@
                       <li><a class="dropdown-item" href="/capoeiraweb/muzenzamap">MUZENZA 서울센터</a></li>
                     </ul>
                   </li>
-                  <li class="nav-item">
-                    <a class="nav-link" href="/capoeiraweb/paging">커뮤니티</a>
+                  <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="cmnitiDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                    커뮤니티
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="cmnitiDropdown">
+                      <li><a class="dropdown-item" href="/capoeiraweb/paging">게시판</a></li>
+                    </ul>
                   </li>
                 </ul>
                 <ul class="navbar-nav ms-auto">
