--- a/src/main/resources/templates/abada_capoeiramap.html
+++ b/src/main/resources/templates/abada_capoeiramap.html
@@ -30,7 +30,7 @@
         ABADÁ-CAPOEIRA 한국지부 대표
     </p>
     <p>
-        facebook : 아바다-카포에이라 한국지부 페이지<br>
+        facebook : 아바다-카포에이라 한국지부<br>
         E-mail : 0000000@naver.nom<br>
         Tel : 010 0000 0000
     </p>
