--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -11,7 +11,7 @@
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="mynavbar">
-                <!-- 아바다 카포에이라와 무젠자 카포에이라의 각각 따로 드롭다운 만듬 -->
+                <!-- 아바다 카포에이라와 무젠자 카포에이라 드롭 다운을 만들고 커뮤니티에도 드롭다운을 추가 -->
                 <ul class="navbar-nav me-auto">
                   <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" id="abadaDropdown" role="button" data-bs-toggle="dropdown" aria-expanded="false">
