--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -20,7 +20,9 @@
                     <ul class="dropdown-menu" aria-labelledby="abadaDropdown">
                       <li><a class="dropdown-item" href="/capoeiraweb/abada">ABADA의 역사</a></li>
                       <li><a class="dropdown-item" href="/capoeiraweb/abadamap">ABADA 서울센터</a></li>
+                      <li><a class="dropdown-item" href="/capoeiraweb/abadamappp">서울센터 시간 안내</a></li>
                       <li><a class="dropdown-item" href="/capoeiraweb/abadamapp">ABADA 부천센터</a></li>
+                      <li><a class="dropdown-item" href="/capoeiraweb/abadamapppp">부천센터 시간 안내</a></li>
                     </ul>
                   </li>
                   <li class="nav-item dropdown">
