--- a/src/main/resources/templates/abada_capoeiramappp.html
+++ b/src/main/resources/templates/abada_capoeiramappp.html
@@ -23,11 +23,14 @@
   <div class="map-content" style="text-align: center;">
     <h2>위치</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3164.3574222146194!2d126.89029974088248!3d37.52307102673482!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357c9fbb205fa6bf%3A0xb5e5fd09aec2aef7!2z7JWE67CU64ukIOy5tO2PrOyXkOudvCDshLzthLA!5e0!3m2!1sko!2skr!4v1682657147118!5m2!1sko!2skr"
-            width="600" height="450"
+            width="886" height="450"
             style="border:0;"
             allowfullscreen=""
             loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            referrerpolicy="no-referrer-when-downgrade">
+
+    </iframe><br>
+    <img src="/img/seabadahome.jpg" width="886" height="514">
   </div>
 </div>
 </body>
