--- a/src/main/resources/templates/abada_capoeiramapppp.html
+++ b/src/main/resources/templates/abada_capoeiramapppp.html
@@ -12,7 +12,7 @@
     <img src="/img/buabada.jpg" width="886" height="694"><<br>
     <p>
       <h2>문의 : 010 0000 0000</h2><br>
-      <h2>-Melancia 멜란시아 (이규호)선생님</h2>
+      <h2>-Melancia 멜란시아 (이규호) 선생님</h2>
     </p>
   </div>
 
@@ -20,16 +20,15 @@
   <div class="map-content" style="text-align: center;">
     <h2>위치</h2>
     <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3165.5711130437426!2d126.75864514088144!3d37.49444612837394!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x357b7d51a3862983%3A0xb2e96815dc585201!2z7JWE67CU64ukIOy5tO2PrOyXkOudvCDrtoDsspzshLzthLA!5e0!3m2!1sko!2skr!4v1682657389347!5m2!1sko!2skr"
-            width="600" height="450"
+            width="886" height="450"
             style="border:0;"
             allowfullscreen=""
             loading="lazy"
-            referrerpolicy="no-referrer-when-downgrade"></iframe>
+            referrerpolicy="no-referrer-when-downgrade">
+
+    </iframe><br>
+    <img src="/img/buabadahome.jpg" width="886" height="498">
   </div>
-
-
-
-
 </div>
 </body>
 </html>
