버튼그룹 중앙정렬 수정

--- a/src/main/resources/templates/detail.html
+++ b/src/main/resources/templates/detail.html
@@ -54,10 +54,12 @@
       </tr>
     </table>
     <!-- 버튼 그룹 -->
-    <div class="button-group">
-      <button onclick="listReq()">목록</button>
-      <button onclick="updateReq()">수정</button>
-      <button onclick="deleteReq()">삭제</button>
+    <div class="d-flex justify-content-center"> <!-- 버튼 그룹을 중앙정렬을 시키기 위해  class="d-flex justify-content-center" 쓴다.-->
+      <div class="button-group">
+        <button onclick="listReq()">목록</button>
+        <button onclick="updateReq()">수정</button>
+        <button onclick="deleteReq()">삭제</button>
+      </div>
     </div>
     <!-- 댓글 작성 부분 -->
     <div style="display:flex; justify-content: center; margin: 10px;">
