메인 화면 제목수정

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,7 +7,7 @@
     <img src="/img/capoeira main.jpg" style="display: block; margin: 0 auto;width:1300px; height:500px;">
     <br>
     <div style="text-align: center;">
-        <h3>카포에이라 홈페이지에 오신것을 환영합니다</h3>
+        <h3>카포에이라 커뮤니티에 오신것을 환영합니다</h3>
         <br>
         <p>
             Capoeira는 싸움, 움직임, 곡예, 음악 및 기타 예술 형식을 포함하는 아프리카-브라질 무술입니다. 16세<br>
