<h1>태크로 제목추가

--- a/src/main/resources/templates/paging.html
+++ b/src/main/resources/templates/paging.html
@@ -14,6 +14,7 @@
 </head>
 <body>
 <div layout:fragment="content">
+  <h1>게시판</h1>
   <div class="container text-center mt-5">
     <table class="table center" style="color:black;">
       <thead class="thead-dark">
